# My_gen_AI_Sber

./: README.md  README.md.txt  compose.yaml
backend/: .env  alembic.ini  dockerfile  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 8274da30b38f_initial.py  90a55ac3ba64_initial.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: contracts.py  users.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/exceptions/: handlers.py
backend/app/middlewares/: access_log.py
backend/app/models/: contract.py  user.py
backend/app/repositories/: contract_repository.py  user_repository.py
backend/app/schemas/: contract.py  user.py
backend/app/services/: contract_service.py  user_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: ContractCard.css  ContractCard.jsx  ContractDetails.css  ContractDetails.jsx  ContractModal.css  ContractModal.jsx  ContractsSidebar.css  ContractsSidebar.jsx  FiltersPanel.css  FiltersPanel.jsx  Header.css  Header.jsx  TabsContainer.css  TabsContainer.jsx
ingestor/: .env  dockerfile  pyproject.toml  pytest.ini
ingestor/app/: main.py  utils.py
ingestor/app/api/: router.py  routing.py
ingestor/app/core/: registry.py
ingestor/app/core/commands/: GigaChatProcurementSearch.py  Unfounded.csv  clear_tags.py  combined_orders.csv
